[package]
name = "task-scheduler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.17"
bb8 = "0.8.0"
bb8-postgres = { version = "0.8.1", features = ["with-uuid-1"] }
chrono = { version = "0.4.22", features = ["serde"] }
postgres-types = { version = "0.2.4", features = ["derive"] }
serde = { version = "1.0.147", features = ["derive"] }
tokio = { version = "1.21.2", features = ["full"]}
tokio-postgres = { version = "0.7.7", features = ["runtime", "with-uuid-1", "with-chrono-0_4", "array-impls"] }
uuid = { version = "1.2.1", features = ["serde"] }
